--- a/html/index.html
+++ b/html/index.html
@@ -427,7 +427,7 @@
 							</div> -->
 							<div class="testimonials">
 								<div class="cavani_tm_title">
-									<span>Testimonials</span>
+									<!-- <span>Testimonials</span> -->
 								</div>
 								<div class="list">
 									<ul class="owl-carousel">
