--- a/html/index.html
+++ b/html/index.html
@@ -765,6 +765,18 @@
 														</div>
 														<a class="cavani_tm_full_link popup-youtube" href="https://artistdiscography.netlify.app/"></a>
 													</div>
+													<li class="detail">
+														<div class="list_inner">
+															<div class="image">
+																<img src="img/thumbs/1-1.jpg" alt="" />
+																<div class="main" data-img-url="img/portfolio/lylescrypto.png"></div>
+																
+																<div class="details">
+																	<h3>React API Selector on Crytpo live updates</h3>
+																	<span>React</span>
+																</div>
+																<a class="cavani_tm_full_link popup-youtube" href="https://artistdiscography.netlify.app/"></a>
+															</div>
 											
 											<div class="hidden_content">
 												<div class="popup_details">
