--- a/html/index.html
+++ b/html/index.html
@@ -518,7 +518,7 @@
 												<div class="main" data-img-url="img/portfolio/petitewine.png"></div>
 												<!-- <span class="icon"><i class="icon-usd"></i></span> -->
 												<div class="details">
-													<h3>Petite Rivière Vineyards - Arbuckle Media© client (Team member)</h3>
+													<h3>Petite Rivière Vineyards - (Team member)</h3>
 													<span>Shopify</span>
 												</div>
 												<a class="cavani_tm_full_link popup-youtube" href="https://petiterivierevineyards.ca/"></a>
