--- a/html/index.html
+++ b/html/index.html
@@ -144,7 +144,7 @@
 									</span>
 									<br>
 									<br>
-									<h5>Making Websites Better</h5>
+									<h7>Making Websites Better</h>
 								</span>
 							</h3>
 							<div class="cavani_tm_button transition_link">
@@ -1079,13 +1079,16 @@
 									<li>
 										<div class="list_inner">
 											<i class="icon-mail-3"></i>
-											<span><a href="#">tilley_L@hotmail.com</a></span>
+											<span><a style='font-size: 13px; color: #333' href="#">tilley_L@hotmail.com
+											Email</a></span>
 										</div>
 									</li>
 									<li>
 										<div class="list_inner">
 											<i class="icon-mobile"></i>
-											<span>+902 877 4470</span>
+											<span>+902 877 4470
+												Cell
+											</span>
 										</div>
 									</li>
 								</ul>
