--- a/html/index.html
+++ b/html/index.html
@@ -139,7 +139,7 @@
 								<span class="cd-headline loading-bar"> <!-- ANIMATE TEXT VALUES: zoom, rotate-1, letters type, letters rotate-2, loading-bar, slide, clip, letters rotate-3, letters scale, push,  -->
 									<span class="blc">Web</span>
 									<span class="cd-words-wrapper">
-									  <b class="is-visible">Developer & QA Tester</b>
+									  <b class="is-visible">Developer & Software QA Tester</b>
 									
 									</span>
 									<br>
