--- a/html/index.html
+++ b/html/index.html
@@ -243,7 +243,7 @@
 												<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
 											</div> -->
 											<div class="progress_inner" data-value="90">
-												<span><span class="label">Shopify</span><span class="number">87%</span></span>
+												<span><span class="label">Shopify</span><span class="number">87% Test</span></span>
 												<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
 											</div>
 											<div class="progress_inner" data-value="80">
