--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <small>&</small>
                     <br>
                     <small>Full Time Software Tester</span></small></h1>
-                <p class="open-sans-font">Hi! I'm Lyle Tilley. I'm a freelance web developer and a Quality Assurance Specalist in Software full time. I'm very passionate and dedicated to my work in the tech world. I love to solve problems and debug complex issues.
+                <p class="open-sans-font">Hi! I'm Lyle Tilley. I'm a freelance web developer and a Quality Assurance Specialist in Software full time. I'm very passionate and dedicated to my work in the tech world. I love to solve problems and debug complex issues.
 
                     Little more about me, you ask? Read on...</p>
                 <a class="button" href="about.html">
