--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <br>
                     <small>&</small>
                     <br>
-                    <small>Full Time Software Tester</span></small></h1>
+                    <small>Full Time Software Engineer</span></small></h1>
                 <p class="open-sans-font">Hi! I'm Lyle Tilley. I'm a freelance web developer and a Quality Assurance Specialist in Software full time. I'm very passionate and dedicated to my work in the tech world. I love to solve problems and debug complex issues.
 
                     Little more about me, you ask? Read on...</p>
