--- a/about.html
+++ b/about.html
@@ -112,8 +112,9 @@
                     <div class="col-6">
                         <ul class="about-list list-unstyled open-sans-font">
                             
-                            <li> <span class="title">More about me :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Little more about me, you ask? 
-                                <br> Gym guy. Identical twin. Wannabe Eliott Alderson from Mr Robot.
+                            <li> <span class="title">More about me :</span><br>
+                                <br> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Little more about me, you ask? 
+                                <br><br> Gym guy. Identical twin. Wannabe Eliott Alderson from Mr Robot.
 <br>
 <br>
                                 After working in advertising for years, I decided to make the jump to tech. With advertising, I loved working with clients content, and seeing results. I wanted to be more hands on, though - design and create. So I pursued web development. It's challenging, creative, and best of all - I am able to make a difference and SEE the difference on live websites - in turn seeing performance go up - this is what I strive for..</span> </li>
