--- a/blog.html
+++ b/blog.html
@@ -113,7 +113,10 @@
                         <ul class="about-list list-unstyled open-sans-font">
                             <li> <span class="title">More about me :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Little more about me, you ask? 
                                 <br> Gym guy. Identical twin. Wannabe Eliott Alderson from Mr Robot. -->
-
+<h3 class="center">A great website begins now.</h3>
+<br>
+<br>
+<br>
                                 After working in advertising for years, I decided to make the jump to tech. With advertising, I loved working with clients content, and seeing results. I wanted to be more hands on, though - design and create. So I pursued web development. It's challenging, creative, and best of all - I am able to make a difference and SEE the difference on live websites - in turn seeing performance go up - this is what I strive for..</span> </li>
                             <!-- <li> <span class="title">phone :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">+21621184010</span> </li> -->
                             <!-- <li> <span class="title">Email :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">tilley_L@hotmail.com</span> </li> -->
