--- a/blog.html
+++ b/blog.html
@@ -117,7 +117,8 @@
 <br>
 <br>
 <br>
-                                After working in advertising for years, I decided to make the jump to tech. With advertising, I loved working with clients content, and seeing results. I wanted to be more hands on, though - design and create. So I pursued web development. It's challenging, creative, and best of all - I am able to make a difference and SEE the difference on live websites - in turn seeing performance go up - this is what I strive for..</span> </li>
+<br><f></f>
+                           Let's make you the best website possible for your business or personal endeavour. I specalize in 3 main website development areas. Please see below for the services and options that will be best tailored to your needs.     </span> </li>
                             <!-- <li> <span class="title">phone :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">+21621184010</span> </li> -->
                             <!-- <li> <span class="title">Email :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">tilley_L@hotmail.com</span> </li> -->
                             <!-- <li> <span class="title">Skype :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">steve.milner</span> </li>
@@ -310,6 +311,8 @@ easy-to-manage
                                 <br>Get a beautiful, functional, mobile friendly website built for you. </p>
                         </li>
                      <br>
+                     
+                     
                         <li>
                             <div class="icon">
                                 <i class="fa fa-briefcase"></i>
@@ -319,6 +322,17 @@ easy-to-manage
                             <p class="open-sans-font">$100.00
                                 <br>
                                 <br>Let Lyle help you manage your social media ad channels. With results. </p>
+                        </li>
+
+                        <li>
+                            <div class="icon">
+                                <i class="fa fa-briefcase"></i>
+                            </div>
+                            <span class="time open-sans-font text-uppercase">Available, please contact</span>
+                            <h3 class="poppins-font text-uppercase">The perfect landing page to get more leads/sales</h3>
+                            <p class="open-sans-font">$100.00
+                                <br>
+                                <br>Create a simple yet effective landing page to get more clients, more sales, and more leads. </p>
                         </li>
                         <!-- <li>
                             <div class="icon">
