--- a/blog.html
+++ b/blog.html
@@ -331,7 +331,11 @@ easy-to-manage
                             <h3 class="poppins-font text-uppercase">The perfect landing page to get more leads/sales</h3>
                             <p class="open-sans-font">$100.00
                                 <br>
-                                <br>Create a simple yet effective landing page to get more clients, more sales, and more leads. </p>
+                                <br>Create a simple yet effective landing page to get more clients, more sales, and more leads.
+                            <br>
+                            <br>
+                            A personalized service that gathers leads for you.
+                            </br> </p>
                         </li>
                         <!-- <li>
                             <div class="icon">
