--- a/about.html
+++ b/about.html
@@ -292,7 +292,7 @@
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2010 - 2015</span>
-                            <h5 class="poppins-font text-uppercase">Mount Saint Vincent University</h5>
+                            <h5 class="poppins-font text-uppercase">Dalhousie/Mount Saint Vincent University</h5>
                             <p class="open-sans-font">BBA - Major IT, minor martketing.
                                 </p>
                         </li>
