--- a/about.html
+++ b/about.html
@@ -276,7 +276,7 @@
                                 <i class="fa fa-briefcase"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2018 - Present</span>
-                            <h5 class="poppins-font text-uppercase">Freelance Web Developer <span class="place open-sans-font">See Portfolio</span></h5>
+                            <h5 class="poppins-font text-uppercase">Freelance Web Developer <span class="place open-sans-font"> <a href="https://lyletilley.com/portfolio.html">See porfolio</a></span></h5>
                             <p class="open-sans-font"></p>
                         </li>
                         <li>
