--- a/blog.html
+++ b/blog.html
@@ -301,7 +301,7 @@ easy-to-manage
                                 <i class="fa fa-briefcase"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">Available, please contact</span>
-                            <h3 class="poppins-font text-uppercase">FULL WEBSITE CREATION</h3>
+                            <h3 class="poppins-font text-uppercase">FULL WEBSITE CREATION / CUSTOM DOMAIN NAME</h3>
                             <p class="open-sans-font">$400.00
                                 <br>
                                 
