--- a/portfolio.html
+++ b/portfolio.html
@@ -96,8 +96,8 @@
                 <!-- Portfolio Item Starts -->
                 <li>
                     <figure>
-                        <img src="img/petite101.JPG" alt="Portolio Image" width="210" height="250">
-                        <div><span>Shopify website</span></div>
+                        <img src="assets/realtorr.JPG" alt="Portolio Image" width="210" height="250">
+                        <div><span>REACT Real Estate Website</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -182,19 +182,19 @@
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website Building</span>
                                 </div>
                                 <div class="col-12 col-sm-6 mb-2">
-                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Winery - AM Client</span>
+                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Any realtor - can create this for YOU!</span>
                                 </div>
                                 <div class="col-12 col-sm-6 mb-2">
-                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">Shopify, Liquid</span>
+                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">React</span>
                                 </div>
                                 <div class="col-12 col-sm-6 mb-2">
-                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://petiterivierevineyards.ca/" target="_blank">https://petiterivierevineyards.ca/</a></span>
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://aesthetic-tartufo-db3907.netlify.app/" target="_blank">https://aesthetic-tartufo-db3907.netlify.app/</a></span>
                                 </div>
                             </div>
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <img src="/img/petite101.JPG" alt="Portolio Image" />
+                        <img src="assets/realtorr.JPG" alt="Portolio Image" />
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
