--- a/portfolio.html
+++ b/portfolio.html
@@ -322,7 +322,7 @@
                                     <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, Javascript, Shopify</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://petiterivierevineyards.ca/" target="_blank">https://petiterivierevineyards.ca/</a></span>
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://petiterivierevineyards.ca/" target="_blank">petiterivierevineyards.ca/</a></span>
                                 </div>
                             </div>
                         </figcaption>
