--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <br>
                     <small>&</small>
                     <br>
-                    <small>Full Time Software Tester</span></small></h1>
+                    <small>Full Time Software Tester/Front End Developer</span></small></h1>
                 <p class="open-sans-font">Hi!
                     <br> I'm Lyle Tilley. I'm a freelance web develope, a Quality Assurance Specialist and Front End Web Developer in Software full time. I'm very passionate and dedicated to my work in the tech world. 
 <br>
