--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
                 <li>
                     <figure>
                         <img src="assets/realtorr.JPG" alt="Portolio Image" width="210" height="250">
-                        <div><span>REACT Real Estate Website</span></div>
+                        <div><span>REACT Lead Generation Page</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -176,19 +176,19 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Shopify Website Build</h3>
+                            <h3>React Website Build</h3>
                             <div class="row open-sans-font">
                                 <div class="col-12 col-sm-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website Building</span>
                                 </div>
                                 <div class="col-12 col-sm-6 mb-2">
-                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Any realtor - can create this for YOU!</span>
+                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Anyone - can create this for YOU!</span>
                                 </div>
                                 <div class="col-12 col-sm-6 mb-2">
                                     <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">React</span>
                                 </div>
                                 <div class="col-12 col-sm-6 mb-2">
-                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://aesthetic-tartufo-db3907.netlify.app/" target="_blank">https://aesthetic-tartufo-db3907.netlify.app/</a></span>
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://tiny-brioche-a3d212.netlify.app/" target="_blank">https://tiny-brioche-a3d212.netlify.app/</a></span>
                                 </div>
                             </div>
                         </figcaption>
