--- a/portfolio.html
+++ b/portfolio.html
@@ -120,8 +120,8 @@
                 <!-- Portfolio Item Starts -->
                 <li>
                     <figure>
-                        <img src="/assets/gallery.png" alt="Portolio Image"  width="210" height="250"/>
-                        <div><span>Cape Breton Gallery</span></div>
+                        <img src="/assets/screenrant.jpeg" alt="Portolio Image"  width="210" height="250"/>
+                        <div><span>ScreenRant</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -280,25 +280,25 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Cape Breton Gallery Website Build</h3>
+                            <h3>ScreenRant website QA and Front End</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website Build</span>
+                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website Addition, and QA</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Cape Breton Gallery - AM Client</span>
+                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">ScreenRant</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, Wordpress</span>
+                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, PHP</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://capebretongallery.com/" target="_blank">capebretongallery.com/</a></span>
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://https://screenrant.com/.com/" target="_blank">capebretongallery.com/</a></span>
                                 </div>
                             </div>
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <video id="video" class="responsive-video" controls poster="/assets/gallery.png">
+                        <video id="video" class="responsive-video" controls poster="/assets/screenrant.jpeg">
                             <!-- <source src="path_to_your_video" type="video/mp4"> -->
                         </video>
                         <!-- Main Project Content Ends -->
