--- a/portfolio.html
+++ b/portfolio.html
@@ -96,8 +96,8 @@
                 <!-- Portfolio Item Starts -->
                 <li>
                     <figure>
-                        <img src="assets/thecontact.JPG" alt="Portolio Image" width="210" height="250">
-                        <div><span>Contact Form Made For yOu</span></div>
+                        <img src="assets/collider.jpeg" alt="Portolio Image" width="210" height="250">
+                        <div><span>Collider</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -179,22 +179,22 @@
                             <h3>CSS, HTML and JAvascript</h3>
                             <div class="row open-sans-font">
                                 <div class="col-12 col-sm-6 mb-2">
-                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website Building</span>
+                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website Addition, QA</span>
                                 </div>
                                 <div class="col-12 col-sm-6 mb-2">
-                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Anyone - can create this for YOU!</span>
+                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Collider</span>
                                 </div>
                                 <div class="col-12 col-sm-6 mb-2">
-                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, Javascript</span>
+                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, Javascript, PHP</span>
                                 </div>
                                 <div class="col-12 col-sm-6 mb-2">
-                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://remarkable-platypus-67edce.netlify.app/" target="_blank">https://aesthetic-tartufo-db3907.netlify.app/</a></span>
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://collider.com/" target="_blank">collider.com</a></span>
                                 </div>
                             </div>
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <img src="assets/thecontact.JPG" alt="Portolio Image" />
+                        <img src="assets/collider.jpeg" alt="Portolio Image" />
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
@@ -292,7 +292,7 @@
                                     <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, PHP</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://https://screenrant.com/.com/" target="_blank">capebretongallery.com/</a></span>
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://https://screenrant.com/.com/" target="_blank">screenrant.com/</a></span>
                                 </div>
                             </div>
                         </figcaption>
