--- a/portfolio.html
+++ b/portfolio.html
@@ -112,8 +112,8 @@
                 <!-- Portfolio Item Starts -->
                 <li>
                     <figure>
-                        <img src="assets/2crowspic.JPG" alt="Portolio Image" width="210" height="250" />
-                        <div><span>Wordpress Website Build</span></div>
+                        <img src="assets/simpleflying.png" alt="Portolio Image" width="210" height="250" />
+                        <div><span>SimpleFlying</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -234,19 +234,19 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Wordpress Website Build</h3>
+                            <h3>Website Addition / QA</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website Build (member)</span>
+                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website addition, and QA</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">2 Crows Brewing - Arbuckle Media client</span>
+                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">SimpleFlying</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, Wordpress and Plugins</span>
+                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, PHP, QA, SQL</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="2crowsbrewing.com/" target="_blank">2crowsbrewing.com/</a></span>
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="simpleflying.com/" target="_blank">simpleflying.com/</a></span>
                                 </div>
                             </div>
                         </figcaption>
@@ -261,7 +261,7 @@
                             <!-- The slideshow -->
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="assets/2crowspic.JPG" alt="Portolio Image" width="210" height="400"/>
+                                    <img src="assets/simpleflying.png" alt="Portolio Image" width="210" height="400"/>
                                 </div>
                                 <!-- <div class="carousel-item">
                                     <img src="http://via.placeholder.com/895x552.jpg" alt="Portolio Image" />
