--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="col-lg-4 bg position-fixed d-none d-lg-block"></div>
         <div class="col-12 col-lg-8 offset-lg-4 home-details text-left text-sm-center text-lg-left">
             <div>
-                <img src="/img/theman101.PNG" class="img-fluid .col-lg-4 main-img-mobile d-none d-sm-block d-lg-none" alt="my picture"  />
+                <img src="/img/memee.jpeg" class="img-fluid .col-lg-4 main-img-mobile d-none d-sm-block d-lg-none" alt="my picture"  />
                 <h1 class="text-uppercase poppins-font">I'm lyle tilley.<span>Freelance Web Developer
                     <br>
                     <small>&</small>
