--- a/portfolio.html
+++ b/portfolio.html
@@ -128,8 +128,8 @@
                 <!-- Portfolio Item Starts -->
                 <li>
                     <figure>
-                        <img src="/assets/petitewinee.JPG" alt="Portolio Image" width="210" height="250"/>
-                        <div><span>Shopify website build</span></div>
+                        <img src="/assets/cbr.com.jpeg" alt="Portolio Image" width="210" height="250"/>
+                        <div><span>CBR</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -310,25 +310,25 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>SHOPIFY WEBSITE</h3>
+                            <h3>Website Additions, QA</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Winery Website - AM client</span>
+                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">CBR</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Petite Winery Nova Scotia</span>
+                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">CBR</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, Javascript, Shopify</span>
+                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, Javascript, PHP, SQL</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://petiterivierevineyards.ca/" target="_blank">petiterivierevineyards.ca/</a></span>
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://cbr.com/" target="_blank">cbr.com/</a></span>
                                 </div>
                             </div>
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <img src="/assets/petitewinee.JPG" alt="Portolio Image" />
+                        <img src="/assets/cbr.com.jpeg" alt="Portolio Image" />
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
