--- a/about.html
+++ b/about.html
@@ -211,25 +211,25 @@
                 <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">php</h6>
             </div> -->
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
-                <div class="c100 p95">
-                    <span>95%</span>
+                <div class="c100 p70">
+                    <span>70%</span>
                     <div class="slice">
                         <div class="bar"></div>
                         <div class="fill"></div>
                     </div>
                 </div>
 
-                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">wordpress</h6>
+                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">MySQ (learning)</h6>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
-                <div class="c100 p50">
-                    <span>50%</span>
+                <div class="c100 p100">
+                    <span>100%</span>
                     <div class="slice">
                         <div class="bar"></div>
                         <div class="fill"></div>
                     </div>
                 </div>
-                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">jquery</h6>
+                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">jira</h6>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
                 <div class="c100 p75">
