--- a/about.html
+++ b/about.html
@@ -219,7 +219,7 @@
                     </div>
                 </div>
 
-                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">MySQ (learning)</h6>
+                <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">MySQL - (learning)</h6>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
                 <div class="c100 p100">
