--- a/portfolio.html
+++ b/portfolio.html
@@ -152,8 +152,8 @@
                 <!-- Portfolio Item Starts -->
                 <li>
                     <figure>
-                        <img src="/assets/tipping.png" alt="Portolio Image" width="210" height="250"/>
-                        <div><span>Shopify Website</span></div>
+                        <img src="/assets/hotcars.jpeg" alt="Portolio Image" width="210" height="250"/>
+                        <div><span>HotCars</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -394,25 +394,25 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Shopify - Tipping Point (Team member)</h3>
+                            <h3>HotCars</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website build</span>
+                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website build, addition, QA</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Tipping Point Distillery - AM client</span>
+                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">HotCars</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, Javascript, Shopify</span>
+                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, Javascript, PHP, SQL</span>
                                 </div>
                                 <div class="col-6 mb-2">
-                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://tippingpointdistillers.ca/" target="_blank">tippingpointdistillers.ca/</a></span>
+                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="https://hotcars.com/" target="_blank">hotcars.com/</a></span>
                                 </div>
                             </div>
                         </figcaption>
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
-                        <img src="/assets/tipping.png" alt="Portolio Image" />
+                        <img src="/assets/hotcars.jpeg" alt="Portolio Image" />
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
